# maplab

console-plugins/image-extraction-plugin/: CMakeLists.txt  package.xml
console-plugins/image-extraction-plugin/include/image-extraction-plugin/: config.h  extractor.h  hdf5_handler.h  image-extraction-plugin.h  image_extractor.h  image_handler.h
console-plugins/image-extraction-plugin/src/: config.cc  extractor.cpp  hdf5_handler.cc  image-extraction-plugin.cc  image_extractor.cc  image_handler.cc
console-plugins/patch-extraction-plugin/: CMakeLists.txt  package.xml
console-plugins/patch-extraction-plugin/src/: patch-extraction-plugin.cc
