<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>image_extraction_plugin</name>
  <version>0.1.0</version>
  <description>A plugin to extract images and patches (pairs or triplets) around 2d keypoints corresponding to same 3d points of a map</description>
  <maintainer email="simomaur@student.ethz.ch">Simon Maurer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>console_common</depend>
  <depend>map_manager</depend>
  <depend>vi_map</depend>
  <depend>hdf5_catkin</depend>
</package>